# quark

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY  Makefile  README.md  config.h.in
arch/i686/: CMakeLists.txt  module.cmake  platform.cmake  quark.lds
arch/i686/cpu/: CMakeLists.txt  cpu.cc  feature.cc  gdt.cc  idt.cc  interrupt.cc  signal.asm  syscall.asm  syscall.cc  tables.asm
arch/i686/drivers/: serial_console.cc
arch/i686/kernel/: CMakeLists.txt  bootstrap.asm  setup.cc  stacktrace.cc  symbol.cc
arch/i686/lib/: CMakeLists.txt  memcpy.asm  memset.asm
arch/i686/mm/: fork.cc  init.cc  map.cc  protect.cc  test.cc  unmap.cc  virtual.cc
arch/i686/proc/: CMakeLists.txt  elf.cc  sched.cc  signal.cc  thread.cc
arch/include/i686/: types.h
arch/include/x86/: types.h
arch/include/x86_64/: common  types.h
arch/x86/: CMakeLists.txt  Kbuild  Makefile  crti.asm  crtn.asm  module.cmake  module.lds  platform.cmake  quark.lds
arch/x86/cpu/: Makefile  cpu.cc  feature.cc  gdt.cc  idt.cc  interrupt.cc  tables.asm  trampoline.cc
arch/x86/kernel/: CMakeLists.txt  Makefile  bootstrap32.asm  module.cc  setup.cc  stacktrace.cc  symbol.cc
arch/x86/kernel/time/: CMakeLists.txt  Makefile  time.cc
arch/x86/lib/: Makefile  memcpy_64.asm  memset_32.asm  memset_64.asm
arch/x86/mm/: CMakeLists.txt  Makefile  common.cc  early.cc  fork.cc  init.cc  map.cc  protect.cc  test.cc  unmap.cc  virtual.cc
arch/x86/proc/: Makefile  sched.cc  signal.cc  thread.cc
arch/x86_64/: CMakeLists.txt  bootstrap32.asm  bootstrap64.asm  module.cmake  module.lds  platform.cmake  quark.lds  toolchain.cmake  x86_64_init.c
arch/x86_64/cpu/: CMakeLists.txt  cpu.cc  feature.cc  gdt.cc  idt.cc  interrupt.cc  signal.S  signal.asm  syscall.S  syscall.asm  tables.S  tables.asm  task.asm  trampoline.cc
arch/x86_64/drivers/: CMakeLists.txt  serial_console.cc
arch/x86_64/kernel/: CMakeLists.txt  bootstrap32.asm  bootstrap64.asm  module.cc  setup.c  setup.cc  stacktrace.cc  symbol.cc
arch/x86_64/lib/: CMakeLists.txt  memcpy.S  memcpy.asm  memcpy_32.asm  memcpy_64.asm  memset.S  memset.asm  memset_64.asm
arch/x86_64/mm/: CMakeLists.txt  clone.cc  common.cc  early.cc  fork.cc  get.cc  init.cc  map.cc  protect.cc  test.cc  unmap.cc  update.cc  virtual.cc
boot/: CMakeLists.txt  constructors.cc
cpu/: CMakeLists.txt  Makefile  cpu.cc  interrupt.cc
doc/: Configuration.md  configuration.md  style_guide.md
doc/lib/: string.md
doc/proc/: wait.md
drivers/: CMakeLists.txt  Makefile
drivers/clock/: CMakeLists.txt  Makefile  intel-8253.cc  tsc.cc
drivers/fb/: CMakeLists.txt  vga.cc
drivers/input/: CMakeLists.txt  Makefile  codes.cc  i8042.cc  input.cc  intel-8042.cc
drivers/irqchip/: CMakeLists.txt  Makefile  intel-8259.cc  irqchip.cc
drivers/pci/: CMakeLists.txt  Makefile  pci.cc
drivers/tty/: CMakeLists.txt  Makefile  serial.cc  vga.cc
fs/: CMakeLists.txt  Makefile  block.cc  descriptor.cc  dev.cc  driver.cc  dtable.cc  fs.cc  ftable.cc  inode.cc  path.cc  poll.cc  pty.cc  tty.cc  vcache.cc  vnode.cc
fs/ext2/: CMakeLists.txt  dir.cc  ext2.cc  file.cc  inode.cc
fs/initfs/: CMakeLists.txt  initfs.cc
fs/initrd/: CMakeLists.txt  Makefile  initrd.cc
fs/pty/: CMakeLists.txt  Makefile  ptm.cc  pts.cc  pty.cc  pty.h
fs/tmpfs/: CMakeLists.txt  Makefile  tmpfs.cc
fs/vtty/: CMakeLists.txt  vtty.cc
include/: errno.h  kernel.h  limits  types.h
include/EABase/: eabase.h
include/EASTL/: algorithm.h  numeric_limits.h  string.h
include/bits/: allocator.h  basic_string.h  basic_string.tcc  hashtable_policy.h  std_abs.h  std_function.h
include/boot/: constructors.h  info.h
include/cpu/: cpu.h  interrupt.h
include/ext/: new_allocator.h
include/fs/: block.h  dentry.h  descriptor.h  dev.h  devnum.h  driver.h  dtable.h  fs.h  ftable.h  inode.h  ioctl.h  mount.h  path.h  poll.h  pty.h  stat.h  superblock.h  tty.h  vcache.h  vnode.h
include/kernel/: assert.h  console.h  init.h  lock.h  log.h  module.h  mutex.h  printk.h  spinlock.h  stacktrace.h  symbol.h
include/lib/: algorithm.h  bitset.h  cqueue.h  functional.h  hashmap.h  libcxx.h  list.h  math.h  memory.h  murmur.h  new.h  optional.h  pair.h  printf.h  queue.h  rb.h  refcount.h  string.h  type_traits.h  unordered_map.h  utility.h  vector.h
include/libstdc++/: cstdio  limits
include/mm/: buddy.h  dma.h  mm.h  page.h  physical.h  section.h  stack.h  valloc.h  virtual.h  vma.h  vmalloc.h
include/proc/: elf.h  process.h  ptable.h  sched.h  signal.h  syscall.h  thread.h  uthread.h  wait.h  work.h  wq.h
include/stl/: algorithm.h  allocator.h  allocator_malloc.h  any.h  array.h  bitset.h  bitvector.h  chrono.h  core_allocator.h  core_allocator_adapter.h  deque.h  fixed_allocator.h  fixed_function.h  fixed_hash_map.h  fixed_hash_set.h  fixed_list.h  fixed_map.h  fixed_set.h  fixed_slist.h  fixed_string.h  fixed_substring.h  fixed_vector.h  functional.h  hash_map.h  hash_set.h  heap.h  initializer_list.h  intrusive_hash_map.h  intrusive_hash_set.h  intrusive_list.h  intrusive_ptr.h  iterator.h  linked_array.h  linked_ptr.h  list.h  map.h  memory.h  meta.h  numeric.h  numeric_limits.h  (+34 more)
include/tm/: process.h  thread.h
kernel/: CMakeLists.txt  Makefile  assert.cc  console.cc  init.cc  kmain.cc  log.cc  module.cc  mutex.cc  panic.cc  printk.c  printk.cc  spinlock.cc  stacktrace.cc  symbol.cc
kernel/time/: CMakeLists.txt  Makefile  time.cc
lib/: CMakeLists.txt  Makefile  bitset.cc  funcexcept.cc  functional.cc  libcxx.cc  list.cc  murmur.cc  optional.cc  placeholders.cc  printf.cc  string.c  string.cc
lib/libstdc++/: CMakeLists.txt  functional.cc
mm/: CMakeLists.txt  Makefile  buddy.cc  dma.cc  heap.cc  mm.cc  page.cc  physical.cc  section.cc  stack.cc  valloc.cc  virtual.cc  vma.cc  vmalloc.cc
proc/: CMakeLists.txt  Makefile  elf.cc  process.cc  ptable.cc  sched.cc  signal.cc  syscall.cc  thread.cc  wait.cc  work.cc  wq.cc
proc/binfmt/: CMakeLists.txt  binfmt.cc  elf.cc  script.cc
tools/: .gitignore  Makefile  Makefile.build  Makefile.include  copyright.sh  header.txt  version.sh  vma_slot.cc
(+137 files in other folders)
